syntax = "proto3";

package com.pal2hmnk.example.generated.grpc.services;

import "services/users.proto";
import "services/shops.proto";

option java_multiple_files = true;

message OrderRequest {
  UserId userId = 1;
}

message OrderHistoryList {
  UserId userId = 1;
  repeated OrderHistory orderHistory = 2;
}

message OrderHistory {
  int32 shopId = 1;
  string ordered = 2;
}
