syntax = "proto3";

package com.pal2hmnk.example.generated.grpc.services;

import "services/users.proto";

option java_multiple_files = true;

service UserService {
  rpc FindUserInfoByName(UserName) returns (UserInfo) {}
  rpc SignUp(SignUpRequest) returns (UserInfo) {}
}

message SignUpRequest {
  UserAuthInfo authInfo = 1;
  UserName name = 2;
}